arrs/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy
  namespace: arr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: arr
  template:
    metadata:
      labels:
        app: arr
    spec:
      containers:
      - name: arr-pod
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - name: config
            mountPath: /config
      restartPolicy: Always
---
