arrs/base/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc
  namespace: arr
spec:
  selector:
    app: arr
  ports:
  - name: arr-port
    port: 80 
    targetPort: http
