arrs/base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ing
  namespace: arr
spec:
  entryPoints:
    - web 
  routes:
    - kind: Rule
      match: Host(`arr.local.net`)
      services:
        - name: arr.local.net 
          port: 80
